Closed Bug 754751 Opened 13 years ago Closed 13 years ago

[Azure] Fix GetClippedGeometry to work with rectangular clips

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

After rectangular clips were introduced GetClippedGeometry was never updated to deal with them. Since Canvas doesn't use rectangular clips that's no problem for production. But it is with the Azure-Thebes wrapper.
Attachment #623550 - Flags: review?(jmuizelaar)
Attachment #623550 - Flags: review?(jmuizelaar) → review+
Attachment #623550 - Attachment is patch: true
Please can you set the target milestone when landing on inbound. Thank you :-) https://hg.mozilla.org/mozilla-central/rev/00927678a3c4
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: