Bug 754751: Fix GetClippedGeometry to work with rectangular clips. r=jrmuizel